--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -318,7 +318,7 @@ As a consequence, any changes made to the font size within the new toolbar input
 
 After some improvements to the `fontsizeinput` toolbar item, pressing enter in the input field now sets the focus back to the {productname} editor viewport, which allows the new font size to be used. 
 
-In {productname} 6.4, pressing enter inside the `inputfontsize` input now returns the focus back to the editor content body.
+In {productname} 6.4, pressing enter inside the `fontsizeinput` input now returns the focus back to the editor content body.
 
 
 [[additions]]
