--- a/modules/ROOT/partials/configuration/ui_mode.adoc
+++ b/modules/ROOT/partials/configuration/ui_mode.adoc
@@ -7,12 +7,12 @@ include::partial$misc/admon-requires-6.4v.adoc[]
 
 This option configures the location of the container where popup menus and inline dialogs are rendered. 
 
-By default, these elements are rendered in a container located in the body. When the editor is rendered in a scrollable container, scrolling the editor's container will cause popup menus and inline dialogs to be detached from the anchor. If `+toolbar_sticky+` is set to true, the sticky toolbar and the menu have no effect on docking when scrolling the editor's container.
+By default, these elements are rendered in a container located in the body. When the editor is rendered in a scrollable container, scrolling the editor's container will cause popup menus and inline dialogs to be detached from the anchor. If `+toolbar_sticky+` is set to true, the sticky toolbar and the menu have no effect on docking when scrolling the editor's container, only triggered when the page is scrolled.
 
 However, setting this option to `+split+` enables support for editor in scrollable containers and adjusts the behaviour as follows:
 
 * Popup menus and inline dialogs are rendered in a separate container adjacent to the editor. These elements moves together as you scroll the editor's container. 
-* If `+toolbar_sticky+` is set to true, the sticky toolbar and the menu will be docked to the top of the editor's container when scrolling down the container and the page until the editor is no longer visible.
+* If `+toolbar_sticky+` is set to true, it is now possible to dock the UI element on both page and container scroll. This means that the UI element will stay in the same place relative to the container, regardless of how much you scroll the page or the container itself.
 
 *Type:* `+String+`
 
@@ -27,7 +27,8 @@ However, setting this option to `+split+` enables support for editor in scrollab
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
-  ui_mode: 'split'
+  ui_mode: 'split',
+  min_height: 500
 });
 ----
 
