DOC-1860: 6.4-release-notes.adoc & nav.adoc
Added section — Accompanying Premium Plugin end-of-life announcement — and added material to said section noting the EOL of the RTC plugin.

Also added appropriate navigation structure to head of `6.4-release-notes.adoc` and `nav.adoc`.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -394,6 +394,7 @@
 *** TinyMCE 6.4
 **** xref:6.4-release-notes.adoc#overview[Overview]
 **** xref:6.4-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:6.4-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium Plugin end-of-life announcement]
 **** xref:6.4-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 **** xref:6.4-release-notes.adoc#improvement[Improvement]
 **** xref:6.4-release-notes.adoc#additions[Additions]
