--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -13,6 +13,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 * xref:new-premium-plugin[New Premium Plugin]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+* xref:accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium Plugin end-of-life announcement]
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 * xref:improvement[Improvement]
 * xref:additions[Additions]
@@ -263,6 +264,16 @@ To quote my [comment, left on the TinyMCE 6.4 BoM][11] in Notion
 
 [15]: <https://github.com/tinymce/advcode/commits/main>
 ////
+
+[[accompanying-premium-plugin-end-of-life-announcement]]
+== Accompanying Premium Plugin end-of-life announcement
+
+The following premium plugin has been announced as reaching its end-of-life:
+
+=== Real-Time Collaboration
+
+TinyMCE’s xref:rtc-introduction.adoc[Real-time Collaboration (RTC)] plugin will be retired and deactivated on December 31, 2023, and is no longer available for purchase.
+
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
 == Accompanying Premium Skins and Icon Packs changes
