DOC-1889: nav.adoc
Added navigation entry for Shadow DOM (shadow-dom.adoc).

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -36,6 +36,7 @@
 ***** xref:webcomponent-pm.adoc[Using a package manager]
 ***** xref:webcomponent-zip.adoc[Using a .zip package]
 **** xref:swing.adoc[Java Swing]
+**** xref:shadow-dom.adoc[Shadow DOM]
 **** xref:jquery-pm.adoc[jQuery]
 **** xref:bootstrap-zip.adoc[Bootstrap]
 **** xref:django-zip.adoc[Django]
