--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -624,7 +624,7 @@ An area for improvement was identified during an accessibility audit for the *he
 
 The consequence of the previous UX, meant that adjustments needed to be made to the horizontal lines within the *help menu* table, that seperate each `row`.
 
-To fix this accessibility issue, {productname} 6.4, increased the contrast ratio to `3:1` to each line divider, and changed the `line` color to `#646D78` to further help define were the separations occur in the table.
+To fix this accessibility issue, {productname} 6.4, increased the contrast ratio to `3:1` for each line divider for better visibility
 
 As a result, the `help menu` is now styled to support a wider range of users, by these new changes implemented.
 
