--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -28,7 +28,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 === Advanced Template 1.1.0
 
-The {productname} 6.4 release includes the release of a new premium plugin: **Advanced Templates**.
+The {productname} 6.4 release includes the release of a new premium plugin: **Advanced Template**.
 
 The **Advanced Template** Premium plugin enables the creation of complex, interactive templates using {productname}.
 
@@ -36,7 +36,7 @@ Templates are declared as `const` variables that can be setup as part of a {prod
 
 They can also be added to a {productname} instance by end-users selecting content in a {productname} document and saving the selection as a template via the {productname} user-interface.
 
-For information on the **Advanced Template** plugin, see: xref:advanced-template.adoc[Advanced Templates].
+For information on the **Advanced Template** plugin, see: xref:advanced-templates.adoc[Advanced Template].
 
 
 [[accompanying-premium-plugin-changes]]
