--- a/modules/ROOT/partials/configuration/ui_mode.adoc
+++ b/modules/ROOT/partials/configuration/ui_mode.adoc
@@ -13,7 +13,7 @@ When the editor is rendered in a scrollable container, scrolling the editor’s 
 
 If `+toolbar_sticky+` is set to true, the sticky toolbar and the menu have no effect on docking when scrolling the editor’s container; they are only triggered when the page is scrolled.
 
-However, setting this option to `+split+` enables support for editors in scrollable containers and adjusts the behaviour as follows:
+However, setting this option to `+'split'+` enables support for editors in scrollable containers and adjusts the behaviour as follows:
 
 * Popup menus and inline dialogs are rendered in a separate container adjacent to the editor. These elements moves together as you scroll the editor’s container. 
 * If `+toolbar_sticky+` is set to true,  the UI element can be docked on both page and container scroll. This means the UI element will stay in the same place relative to the container, regardless of how much you scroll the page or the container itself.
