DOC-1860: 6.4-release-notes.adoc
Added outline for Permanent Pen sub-section in the Premium Plugins section.

--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -225,6 +225,17 @@ To quote my [comment, left on the TinyMCE 6.4 BoM][8] in Notion
 For information on the **Enhanced Media Embed** plugin, see: xref:introduction-to-mediaembed.adoc[Introduction to Enhanced Media Embed].
 
 
+=== Permanent Pen 2.0.3
+
+The {productname} 6.4 release includes an accompanyin release of the **Permanent Pen** premium plugin.
+
+**Permanent Pen 2.0.3 includes the following fix:
+
+==== Updated the font and fontsize dropdown styles to match the default TinyMCE styles
+
+//#TINY-9630
+
+
 === Spell Checker Pro 3.2.1
 
 The {productname} 6.4 release includes an accompanying release of the **Spell Checker Pro** premium plugin.
