DOC-1860: 6.4-release-notes.adoc
Added outline for Mentions sub-section in the Premium Plugins section.

--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -235,6 +235,21 @@ The {productname} 6.4 release includes an accompanyin release of the **Permanent
 
 //#TINY-9630
 
+For information on the **Permanent Pen** plugin, see xref:permanentpen.adoc[Permanent Pen].
+
+
+=== Mentions 3.0.4
+
+The {productname} 6.4 release includes an accompanyin release of the **Mentions** premium plugin.
+
+**Mentions** 3.0.4 includes the following fix:
+
+==== It wasn’t possible to press enter after a pasted mention.
+
+//#TINY-9423
+
+For information on the **Mentions** plugin, see xref:mentions.adoc[Mentions].
+
 
 === Spell Checker Pro 3.2.1
 
