--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -483,7 +483,7 @@ tinymce.init({
 });
 ----
 
-As a result of this addition, this new option makes it easier and faster for users that are using the 'new toolbar component' to customize their font size within {productname}, as they no longer need to worry about selecting the correct UOM.
+As a result of this addition, this new option makes it easier and faster for users using the 'new toolbar component' to customize their font size within {productname}, as they no longer need to worry about selecting the correct UOM.
 
 === New group and togglebutton in view
 // TINY-9523
