DOC-1914: dialog-components.adoc
Replaced undefined `store` with `console.log`.

Also added comment lines noting this is for demo purposes.

--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -578,7 +578,7 @@ tinymce.init({
                         type: 'menuitem',
                         text: 'Menu item',
                         onAction: () => {
-                          store.add('menuitem');
+                          console.log; // for demo purposes
                         }
                       }
                     ])
@@ -601,7 +601,7 @@ tinymce.init({
                             type: 'menuitem',
                             text: 'Menu item',
                             onAction: () => {
-                              store.add('menuitem');
+                              console.log; // for demo purposes
                             }
                           }
                         ])
