Previously missed edits to js example formatting.
Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -578,7 +578,10 @@ tinymce.init({
       onAction: () => {
         ed.windowManager.open({
           title: 'Tree dialog',
-          buttons: [{type: 'cancel', text: 'Cancel',}],
+          buttons: [{
+	    type: 'cancel',
+	    text: 'Cancel'
+	  }],
           body : {
             type: 'panel',
             items: [{
