--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -598,13 +598,7 @@ tinymce.init({
                     icon: 'image-options',
                     type: 'menubutton',
                     fetch: (success) => success([
-                      {
-                        type: 'menuitem',
-                        text: 'Menu item',
-                        onAction: () => {
-                          console.log; // for demo purposes
-                        }
-                      }
+		     'bold', 'italic', 'underline'
                     ])
                   },
                   children: [
