Simpler explanation than configuring custom menu items.
Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/pages/dialog-components.adoc
+++ b/modules/ROOT/pages/dialog-components.adoc
@@ -615,13 +615,7 @@ tinymce.init({
                         icon: 'image-options',
                         type: 'menubutton',
                         fetch: (success) => success([
-                          {
-                            type: 'menuitem',
-                            text: 'Menu item',
-                            onAction: () => {
-                              console.log; // for demo purposes
-                            }
-                          }
+			  'blocks', 'fontfamily', 'fontsize'
                         ])
                       }
                     },
